@@ -3,9 +3,6 @@ package com.yahoo.vespa.model.content;
 
 import com.yahoo.documentmodel.NewDocumentType;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -13,9 +10,8 @@ import java.util.stream.Collectors;
 
 public class ReservedDocumentTypeNameValidator {
 
-    public static final List<String> ORDERED_RESERVED_NAMES = Collections.unmodifiableList(
-            Arrays.asList("and", "false", "id", "not", "null", "or", "true"));
-    public static final Set<String> RESERVED_NAMES = Collections.unmodifiableSet(new HashSet<>(ORDERED_RESERVED_NAMES));
+    public static final List<String> ORDERED_RESERVED_NAMES = List.of("and", "false", "id", "not", "null", "or", "true");
+    public static final Set<String> RESERVED_NAMES = Set.copyOf(ORDERED_RESERVED_NAMES);
 
     public void validate(Map<String, NewDocumentType> documentDefinitions) {
         List<String> conflictingNames = documentDefinitions.keySet().stream()
