@@ -21,7 +21,6 @@ import com.yahoo.vespa.model.container.configserver.option.CloudConfigOptions;
 import com.yahoo.vespa.model.container.xml.ConfigServerContainerModelBuilder;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
@@ -44,7 +43,7 @@ public class ConfigserverClusterTest {
 
     @Test
     void zookeeperConfig_only_config_servers_set_hosted() {
-        TestOptions testOptions = createTestOptions(Arrays.asList("cfg1", "localhost", "cfg3"), List.of());
+        TestOptions testOptions = createTestOptions(List.of("cfg1", "localhost", "cfg3"), List.of());
         ZookeeperServerConfig config = getConfig(ZookeeperServerConfig.class, testOptions);
         assertZookeeperServerProperty(config.server(), ZookeeperServerConfig.Server::hostname, "cfg1", "localhost", "cfg3");
         assertZookeeperServerProperty(config.server(), ZookeeperServerConfig.Server::id, 0, 1, 2);
@@ -55,7 +54,7 @@ public class ConfigserverClusterTest {
 
     @Test
     void zookeeperConfig_with_config_servers_and_zk_ids_hosted() {
-        TestOptions testOptions = createTestOptions(Arrays.asList("cfg1", "localhost", "cfg3"), List.of(4, 2, 3));
+        TestOptions testOptions = createTestOptions(List.of("cfg1", "localhost", "cfg3"), List.of(4, 2, 3));
         ZookeeperServerConfig config = getConfig(ZookeeperServerConfig.class, testOptions);
         assertZookeeperServerProperty(config.server(), ZookeeperServerConfig.Server::hostname, "cfg1", "localhost", "cfg3");
         assertZookeeperServerProperty(config.server(), ZookeeperServerConfig.Server::id, 4, 2, 3);
@@ -66,7 +65,7 @@ public class ConfigserverClusterTest {
     @Test
     void zookeeperConfig_self_hosted() {
         final boolean hostedVespa = false;
-        TestOptions testOptions = createTestOptions(Arrays.asList("cfg1", "localhost", "cfg3"), Arrays.asList(4, 2, 3), hostedVespa);
+        TestOptions testOptions = createTestOptions(List.of("cfg1", "localhost", "cfg3"), List.of(4, 2, 3), hostedVespa);
         ZookeeperServerConfig config = getConfig(ZookeeperServerConfig.class, testOptions);
         assertZookeeperServerProperty(config.server(), ZookeeperServerConfig.Server::hostname, "cfg1", "localhost", "cfg3");
         assertZookeeperServerProperty(config.server(), ZookeeperServerConfig.Server::id, 4, 2, 3);
@@ -78,7 +77,7 @@ public class ConfigserverClusterTest {
     @Test
     void zookeeperConfig_uneven_number_of_config_servers_and_zk_ids() {
         assertThrows(IllegalArgumentException.class, () -> {
-            TestOptions testOptions = createTestOptions(Arrays.asList("cfg1", "localhost", "cfg3"), List.of(1));
+            TestOptions testOptions = createTestOptions(List.of("cfg1", "localhost", "cfg3"), List.of(1));
             getConfig(ZookeeperServerConfig.class, testOptions);
         });
     }
@@ -86,7 +85,7 @@ public class ConfigserverClusterTest {
     @Test
     void zookeeperConfig_negative_zk_id() {
         assertThrows(IllegalArgumentException.class, () -> {
-            TestOptions testOptions = createTestOptions(Arrays.asList("cfg1", "localhost", "cfg3"), List.of(1, 2, -1));
+            TestOptions testOptions = createTestOptions(List.of("cfg1", "localhost", "cfg3"), List.of(1, 2, -1));
             getConfig(ZookeeperServerConfig.class, testOptions);
         });
     }
@@ -135,7 +134,7 @@ public class ConfigserverClusterTest {
     private static <T> void assertZookeeperServerProperty(
             List<ZookeeperServerConfig.Server> zkServers, Function<ZookeeperServerConfig.Server, T> propertyMapper, T... expectedProperties) {
         List<T> actualPropertyValues = zkServers.stream().map(propertyMapper).toList();
-        List<T> expectedPropertyValues = Arrays.asList(expectedProperties);
+        List<T> expectedPropertyValues = List.of(expectedProperties);
         assertEquals(expectedPropertyValues, actualPropertyValues);
     }
 
