@@ -5,7 +5,6 @@ import com.yahoo.documentmodel.NewDocumentType;
 import org.junit.jupiter.api.Test;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -26,14 +25,14 @@ public class TopologicalDocumentTypeSorterTest {
 
     @Test
     void require_that_types_with_references_are_sorted_in_topological_order() {
-        assertOrder(Arrays.asList("b", "a"), new DocumentTypesBuilder()
+        assertOrder(List.of("b", "a"), new DocumentTypesBuilder()
                 .add("a", List.of("b"))
                 .add("b"));
-        assertOrder(Arrays.asList("c", "b", "a"), new DocumentTypesBuilder()
-                .add("a", Arrays.asList("b", "c"))
+        assertOrder(List.of("c", "b", "a"), new DocumentTypesBuilder()
+                .add("a", List.of("b", "c"))
                 .add("b", List.of("c"))
                 .add("c"));
-        assertOrder(Arrays.asList("b", "a", "d", "c"), new DocumentTypesBuilder()
+        assertOrder(List.of("b", "a", "d", "c"), new DocumentTypesBuilder()
                 .add("a", List.of("b"))
                 .add("b")
                 .add("c", List.of("d"))
